4697.	[bug]		Restore workaround for Microsoft Windows TSIG hash
			computation bug. [RT #45854]

4696.	[port]		Enable filter-aaaa support by default on Windows
			builds. [RT #45883]

4695.	[bug]		cookie-secrets were not being properly checked by
			named-checkconf. [RT #45886]

4694.	[func]		dnssec-keygen no longer uses RSASHA1 by default;
			the signing algorithm must be specified on
			the command line with the "-a" option.  Signing
			scripts that rely on the existing default behavior
			will break; use "dnssec-keygen -a RSASHA1" to
			repair them. (The goal of this change is to make
			it easier to find scripts using RSASHA1 so they
			can be changed in the event of that algorithm
			being deprecated in the future.) [RT #44755]

4693.	[func]		Synthesis of responses from DNSSEC-verified records.
			Stage 1 covers NXDOMAIN synthesis from NSEC records.
			This is controlled by synth-from-dnssec and is enabled
			by default. [RT #40138]

4692.	[bug]		Fix build failures with libressl introduced in 4676.
			[RT #45879]

4691.	[func]		Add -4/-6 command line options to nsupdate and rndc.
			[RT #45632]

4690.	[bug]		Command line options -4/-6 were handled inconsistently
			between tools. [RT #45632]

4689.	[cleanup]	Turn on minimal responses for CDNSKEY and CDS in
			addition to DNSKEY and DS. Thanks to Tony Finch.
			[RT #45690]

4688.	[protocol]	Check and display EDNS KEY TAG options (RFC 8145) in
			messages. [RT #44804]

4687.	[func]		Refactor tracklines code. [RT #45126]

4686.	[bug]		dnssec-settime -p could print a bogus warning about
			key deletion scheduled before its inactivation when a
			key had an inactivation date set but no deletion date
			set. [RT #45807]

4685.	[bug]		dnssec-settime incorrectly calculated publication and
			activation dates for a successor key. [RT #45806]

4684.	[bug]		delv could send bogus DNS queries when an explicit
			server address was specified on the command line along
			with -4/-6. [RT #45804]
