@@ -1,3 +1,7 @@
+4698.	[port]		Add --with-python-install-dir configure option to allow
+			specifying a nonstandard installation directory for
+			Python modules. [RT #45407]
+
 4697.	[bug]		Restore workaround for Microsoft Windows TSIG hash
 			computation bug. [RT #45854]
 
